--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
 									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
 								</div>
 								<select class="form-control" id="chucvu">
-									<option value="0">Chọn chức vụ</option>
-									<option value="A">Sếp</option>
-									<option value="B">Trưởng phòng</option>
-									<option value="C">Nhân viên</option>
+									<option>Chọn chức vụ</option>
+									<option>Sếp</option>
+									<option>Trưởng phòng</option>
+									<option>Nhân viên</option>
 								</select>
 							</div>
 
